# payoff

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  installer.sh
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: v0.2.0-plan.md
hooks/: hooks.json
skills/claude-time-report/: SKILL.md
skills/payoff-report/: SKILL.md
skills/payoff-setup/: SKILL.md
src/: cli.rs  config.rs  correlate.rs  env_capture.rs  git_history.rs  hooks.rs  html_report.rs  install.rs  lib.rs  main.rs  model.rs  paths.rs  report.rs  serve.rs  storage.rs  transcript.rs
tests/: integration.rs  scoring_accuracy.rs  transcript_fidelity.rs
