[package]
name = "payoff"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Passive-only ROI tracker for AI coding sessions. Did the session pay off? Measured by what survived in HEAD."
readme = "README.md"
keywords = ["ai", "productivity", "metrics", "git", "retention"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/ayodm/payoff"
homepage = "https://github.com/ayodm/payoff"
authors = ["Ayo Mosanya"]
rust-version = "1.75"

[[bin]]
name = "payoff"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
anyhow = "1"
thiserror = "1"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
indoc = "2"
dirs = "5"
tiny_http = "0.12"
open = "5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
